estilizacao do sidebar e criacao do component cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div>
+  <app-sidebar-desktop></app-sidebar-desktop>
   <router-outlet></router-outlet>
   <app-sidebar-mobile></app-sidebar-mobile>
 </div>
