--- a/src/app/shared/components/sidebar-desktop/sidebar-desktop.component.html
+++ b/src/app/shared/components/sidebar-desktop/sidebar-desktop.component.html
@@ -1,1 +1,15 @@
-<p>sidebar-desktop works!</p>
+<div
+  class="hidden rounded-tr-lg rounded-br-lg md:flex flex-col justify-between bg-grey-900 text-white fixed top-0 bottom-0 w-[300px]"
+>
+  <div>
+    <div class="pl-4 py-10">
+      <svg-icon src="assets/images/logo-large.svg" name="logo"></svg-icon>
+    </div>
+    <div>
+      <app-icons-sidebar></app-icons-sidebar>
+    </div>
+  </div>
+  <div class="mb-10">
+    <a href="#">Minimize Menu</a>
+  </div>
+</div>
