--- a/src/app/shared/components/sidebar-mobile/sidebar-mobile.component.html
+++ b/src/app/shared/components/sidebar-mobile/sidebar-mobile.component.html
@@ -1,44 +1,5 @@
 <div
-  class="fixed bottom-0 left-0 right-0 px-3 pt-2 h-[52px] bg-grey-900 rounded-t-lg"
+  class="fixed bottom-0 left-0 right-0 px-3 pt-2 h-[52px] sm:h-[74px] bg-grey-900 rounded-t-lg md:hidden"
 >
-  <ul class="flex items-center justify-center">
-    <li>
-      <a href="#">
-        <svg-icon
-          src="assets/images/icon-nav-overview.svg"
-          name="overview"
-          class="SvgStyle"
-        ></svg-icon>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <svg-icon
-          src="assets/images/icon-nav-transactions.svg"
-          name="transactions"
-        ></svg-icon>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <svg-icon
-          src="assets/images/icon-nav-budgets.svg"
-          name="budgets"
-        ></svg-icon>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <svg-icon src="assets/images/icon-nav-pots.svg" name="pots"></svg-icon>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <svg-icon
-          src="assets/images/icon-nav-recurring-bills.svg"
-          name="bills"
-        ></svg-icon>
-      </a>
-    </li>
-  </ul>
+  <app-icons-sidebar></app-icons-sidebar>
 </div>
