--- a/src/app/shared/pages/home/home.component.html
+++ b/src/app/shared/pages/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div class="md:ml-[300px] px-3 pt-3">
+  <h1 class="font-bold text-3xl">Overview</h1>
+
+  <div class="mb-3">
+    <app-cards></app-cards>
+  </div>
+</div>
