--- a/src/app/shared/pages/home/home.component.html
+++ b/src/app/shared/pages/home/home.component.html
@@ -1,7 +1,19 @@
 <div class="md:ml-[300px] px-3 pt-3">
-  <h1 class="font-bold text-3xl">Overview</h1>
-
-  <div class="mb-3">
-    <app-cards></app-cards>
+  <div class="mb-5">
+    <app-title-page [titlePages]="titlePage"></app-title-page>
+  </div>
+  <div class="sm:flex justify-between gap-3">
+    <div class="mb-3 sm:w-full">
+      <app-cards [currency]="values[0]" [nameCard]="nameCard[0]"></app-cards>
+    </div>
+    <div class="mb-3 sm:w-full">
+      <app-cards [currency]="values[1]" [nameCard]="nameCard[1]"></app-cards>
+    </div>
+    <div class="mb-3 sm:w-full">
+      <app-cards [currency]="values[2]" [nameCard]="nameCard[2]"></app-cards>
+    </div>
+  </div>
+  <div>
+    <app-card-pots></app-card-pots>
   </div>
 </div>
