--- a/src/app/shared/components/cards/cards.component.html
+++ b/src/app/shared/components/cards/cards.component.html
@@ -1,4 +1,4 @@
-<div class="bg-black text-white p-5 rounded-lg">
-  <p class="text-sm mb-3"></p>
-  <span class="font-bold text-2xl">$</span>
+<div class="bg-white text-grey-500 p-5 rounded-lg">
+  <p class="text-sm mb-3">{{ nameCard }}</p>
+  <span class="font-bold text-2xl">$ {{ currency }}</span>
 </div>
