--- a/src/app/shared/pages/transactions/transactions.component.html
+++ b/src/app/shared/pages/transactions/transactions.component.html
@@ -1,1 +1,5 @@
-<p>transactions works!</p>
+<div class="md:ml-[300px] px-3 pt-3">
+  <div>
+    <app-title-page [titlePages]="title"></app-title-page>
+  </div>
+</div>
